<resources>
    <string name="app_name">Trifler</string>

    <!-- Onboarding-->
    <string name="oboarding_skip_button">Skip</string>
    <string name="onboarding_get_started_button">Get Started</string>

    <!-- Sign in-->
    <string name="login_primary_button">Sign in</string>
    <string name="login_secondary_button">Sign in with Google</string>
    <string name="login_title">Welcome Back</string>
    <string name="login_subtitle_primary">Don\'t have an account?</string>
    <string name="login_subtitle_secondary">Sign up</string>
    <string name="login_phone_field">Phone Number</string>
    <string name="login_password_field">Password</string>
    <string name="or">OR</string>
    <string name="login_redirect_button">Sign up</string>
    <string name="phone_blank">Phone Number cannot be blank</string>
    <string name="password_blank">Password cannot be blank</string>
    <string name="login_failure">Unable to Login, Please Try Again</string>

    <!-- Sign up-->
    <string name="create_account">Create Account</string>
    <string name="signup_primary_text">Already have an account?</string>
    <string name="signup_redirect_text">Sign in</string>
    <string name="signup_subtitle_secondary">Sign In</string>
    <string name="signup_first_name">First Name</string>
    <string name="signup_last_name">Last Name</string>
    <string name="signup_phone">Phone Number</string>
    <string name="signup_password">Password</string>
    <string name="signup_terms_and_conditions"><![CDATA[I agree to Term & Condition and Privacy Policy]]></string>
    <string name="signup_updated">Keep me updated with new versions</string>
    <string name="signup_primary_button">Sign up</string>
    <string name="signup_secondary_button">Sign up with Google</string>
    <string name="signup_firstname_blank">First Name cannot be empty</string>
    <string name="signup_lastname_blank">Last Name cannot be empty</string>
    <string name="signup_phone_blank">Phone Number cannot be empty</string>
    <string name="signup_password_blank">Password cannot be empty</string>
    <string name="signup_failure">Unable to Signup, Please Try Again</string>
    <string name="signup_tnc_unchecked">Terms and conditions not checked</string>
    <string name="signup_phone_number">Phone Number</string>
    <string name="signup_phone_number_blank">Phone Number cannot be empty</string>

    <!-- Dashboard-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="onboarding_dashboard_heading">How would like to start?</string>
    <string name="onboarding_dashboardcard_header_one">Add Contact</string>
    <string name="onboarding_dashboardcard_body_one">You can add an phone number as temporary.</string>
    <string name="onboarding_dashboardcard_header_two">Add Category</string>
    <string name="onboarding_dashboardcard_body_two">Create new categories for your contacts and access them.</string>
    <string name="onboarded_dashboardcard_primary">I want to..</string>
    <string name="onboarded_dashboard_recycler_header">My categories</string>
    <string name="onboarded_dashboard_action_1">Search A Contact</string>
    <string name="onboarded_dashboard_action_2">Add A Contact</string>

    <!-- Popup Menu -->
    <string name="popup_dashboard">Dashboard</string>
    <string name="popup_all_contacts">All Contacts</string>
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_category">Category</string>
    <string name="bottom_nav_speed_dial">Speed Dial</string>
    <string name="bottom_nav_contacts">Contacts</string>
    <string name="bottom_nav_profile">Profile</string>

    <!-- Contacts -->
    <string name="contact_step_1_title">Add a Contact</string>
    <string name="contact_step_1_subtitle">Enter Phone Number to Add Contact</string>
    <string name="contact_step_1_cta">Add Contact</string>
    <string name="contact_sample_phone">9734651254</string>
    <string name="in_country_code">+91</string>
    <string name="contact_step_2_title">This Contact exists in Trifler</string>
    <string name="contact_step_2_subtitle">Send request if you know the person. Though you can still add the contact.</string>
    <string name="contact_step_2_cta_1">Continue</string>
    <string name="contact_step_2_cta_2">Send Request</string>
    <string name="contact_step_3_title">Add a Contact</string>
    <string name="contact_step_3_subtitle">Enter Contact Information</string>
    <string name="contact_step_3_phone_number_title">PHONE NO.</string>
    <string name="contact_step_3_input_name">Contact Name</string>
    <string name="contact_step_3_category_hint">Category In</string>
    <string name="contact_step_3_duration_hint">Temporary for</string>
    <string name="contact_step_3_cta">Add Contact</string>
    <string name="contact_step_4_cta">Dashboard</string>
    <string name="contact_step_4_success">Request Sent</string>
    <string name="contact_step_4_error">Request couldn\'t be sent</string>

    <!-- Category -->
    <string name="category_step_1_title">Add a New Category</string>
    <string name="category_step_1_category_input_hint">Enter Category Name</string>
    <string name="category_step_1_cta">Add Category</string>
    <string name="category_step_2_as_divider">AS</string>
    <string name="category_card_header">Saved as</string>
    <string name="category_step_2_cta">Dashboard</string>
    <string name="category_step_1_empty_error">Category name cannot be empty</string>
    <string name="category_step_1_duplicate_error">Category name already exists</string>
    <string name="category_step_1_network_error">Some error occurred, please try again</string>
</resources>