<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".sigin.view.SigninActivity">

        <com.meshdesh.trifler.common.customview.SigninUpHeader
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:buttonText="@string/login_redirect_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:subtitlePrimaryText="@string/login_subtitle_primary"
            app:subtitleSecondaryText="@string/login_subtitle_secondary"
            app:titleText="@string/login_title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailContainer"
            style="@style/Widget.Trifler.TextInputLayout.FilledBox.CustomFont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="55dp"
            android:layout_marginTop="40dp"
            android:hint="@string/login_email_field"
            app:endIconMode="clear_text"
            app:endIconTint="@color/nobel"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordContainer"
            style="@style/Widget.Trifler.TextInputLayout.FilledBox.CustomFont"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/login_password_field"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/nobel"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="@id/emailContainer"
            app:layout_constraintStart_toStartOf="@id/emailContainer"
            app:layout_constraintTop_toBottomOf="@id/emailContainer">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButton"
            style="@style/Widget.Trifler.Button.Rounded"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/login_primary_button"
            app:layout_constraintEnd_toEndOf="@id/emailContainer"
            app:layout_constraintStart_toStartOf="@id/emailContainer"
            app:layout_constraintTop_toBottomOf="@id/passwordContainer" />

        <include
            android:id="@+id/divider"
            layout="@layout/custom_or_divider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButtonGoogle"
            style="@style/Widget.Trifler.Button.Rounded"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/login_secondary_button"
            app:icon="@drawable/ic_google_icon"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/emailContainer"
            app:layout_constraintStart_toStartOf="@id/emailContainer"
            app:layout_constraintTop_toBottomOf="@id/divider" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
